--- a/styles/clothes.module.css
+++ b/styles/clothes.module.css
@@ -593,6 +593,7 @@
 }
 /* #endregion */
 /* #region SIDEBAR */
+
 .sidebar {
   width: 0vw;
   height: 0px;
@@ -756,12 +757,12 @@
     height: 60px;
   }
   #sidebar_hide {
-    width: 0;
-    height: 0;
+    width: 0px;
+    height: 0px;
   }
   #sidebar_hide div img {
-    width: 0;
-    height: 0;
+    width: 0px;
+    height: 0px;
   }
   @media (max-height: 640px) {
     .sidebar {
@@ -776,4 +777,5 @@
     padding-top: 2px;
   }
 }
+
 /* #endregion */
