--- a/styles/globals.css
+++ b/styles/globals.css
@@ -104,6 +104,7 @@ body {
   border-bottom-right-radius: 2vw;
   box-shadow: inset -5px 5px 5px -5px rgba(0, 0, 0, 0.5);
   cursor: default;
+  width: 94px;
 }
 .sidebar_menu_on:hover {
   filter: brightness(100%);
@@ -130,6 +131,7 @@ body {
   border-bottom-right-radius: 2vw;
   box-shadow: inset -5px 5px 5px -5px rgba(0, 0, 0, 0.5);
   cursor: default;
+  width: 94px;
 }
 .sidebar_clothes_on:hover {
   filter: brightness(100%);
@@ -156,6 +158,7 @@ body {
   border-bottom-right-radius: 2vw;
   box-shadow: inset -5px 5px 5px -5px rgba(0, 0, 0, 0.5);
   cursor: default;
+  width: 94px;
 }
 .sidebar_cupboard_on:hover {
   filter: brightness(100%);
@@ -182,6 +185,7 @@ body {
   border-bottom-right-radius: 2vw;
   box-shadow: inset -5px 5px 5px -5px rgba(0, 0, 0, 0.5);
   cursor: default;
+  width: 94px;
 }
 .sidebar_account_on:hover {
   filter: brightness(100%);
