--- a/styles/globals.css
+++ b/styles/globals.css
@@ -98,34 +98,35 @@ body {
 /* #endregion */
 /* #region CHROME SCROLLBAR */
 ::-webkit-scrollbar {
+  min-width: 10px;
   width: 0.9vw;
 }
 
 ::-webkit-scrollbar-thumb {
-  background: #e7e3e4;
-  border-radius: 1vh;
+  background: #bbb;
+  border-radius: 20px;
   box-shadow: 0px 5px 5px -4px rgba(0, 0, 0, 0.5);
 }
 
 ::-webkit-scrollbar-thumb:hover {
   background: #999;
-  border-radius: 1vh;
+  border-radius: 20px;
 }
 
 ::-webkit-scrollbar-track:hover {
-  border-radius: 1vh;
+  border-radius: 20px;
   background: #f7f7f7;
   box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.2);
 }
 
 ::-webkit-scrollbar-thumb:active {
-  border-radius: 1vh;
+  border-radius: 20px;
   background-color: #666;
 }
 
 ::-webkit-scrollbar-track {
   background: #f7f7f7;
-  border-radius: 1vh;
+  border-radius: 20px;
   box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.2);
 }
 /* #endregion */
