--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,4 @@
+@import url("https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap");
 /* #region BODY */
 body {
   background-color: white;
@@ -94,40 +95,6 @@ body {
 }
 .transition_all_02s {
   transition: all 0.2s ease;
-}
-/* #endregion */
-/* #region CHROME SCROLLBAR */
-::-webkit-scrollbar {
-  min-width: 10px;
-  width: 0.9vw;
-}
-
-::-webkit-scrollbar-thumb {
-  background: #bbb;
-  border-radius: 20px;
-  box-shadow: 0px 5px 5px -4px rgba(0, 0, 0, 0.5);
-}
-
-::-webkit-scrollbar-thumb:hover {
-  background: #999;
-  border-radius: 20px;
-}
-
-::-webkit-scrollbar-track:hover {
-  border-radius: 20px;
-  background: #f7f7f7;
-  box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.2);
-}
-
-::-webkit-scrollbar-thumb:active {
-  border-radius: 20px;
-  background-color: #666;
-}
-
-::-webkit-scrollbar-track {
-  background: #f7f7f7;
-  border-radius: 20px;
-  box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.2);
 }
 /* #endregion */
 /* #region ADD CLOTHES MODAL */
