--- a/styles/account.module.css
+++ b/styles/account.module.css
@@ -1,10 +1,12 @@
 .login_rectangle {
+  position: fixed;
+  transform: translate(-50%, -50%);
+  left: -1.5vw;
   display: flex;
   flex-wrap: wrap;
-  justify-content: center;
-  align-items: center;
-  height: 57.5vh;
-  width: 78.5vw;
+  align-content: flex-start;
+  height: 54vh;
+  width: 77vw;
   margin-left: 0px;
   border-radius: 5vh;
   background-color: rgba(255, 255, 245, 0.55);
@@ -21,8 +23,9 @@
 /* USERNAME */
 .flexbox_username {
   flex-basis: 50%;
-  height: 100px;
+  height: 60px;
   display: flex;
+  margin-top: 4.5vh;
 }
 .flexbox_username_text {
   font-size: 35px;
@@ -42,7 +45,7 @@
   box-shadow: inset 0 0 3px rgba(0, 0, 0, 0.2);
   text-align: center;
   border-radius: 20px;
-  height: 38%;
+  height: 60%;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -51,16 +54,18 @@
 /* PASSWORD */
 .flexbox_password {
   flex-basis: 50%;
-  height: 100px;
+  height: 60px;
   display: flex;
+  margin-top: 4.5vh;
 }
-
 .flexbox_password_text {
+  display: flex;
   font-size: 35px;
   color: #5a6c73;
   font-weight: 700;
-  flex-basis: 26%;
+  flex-basis: 28%;
   align-self: center;
+  justify-content: center;
 }
 .flexbox_password_rectangle {
   color: #f98770;
@@ -72,115 +77,56 @@
   box-shadow: inset 0 0 3px rgba(0, 0, 0, 0.2);
   text-align: center;
   border-radius: 20px;
-  height: 38%;
+  height: 60%;
   display: flex;
   justify-content: center;
   align-items: center;
 }
 /* OPTIONS */
 .flexbox_options {
-  flex-basis: 20%;
-  height: 20px;
-  font-size: 16px;
-  margin-top: -13vh;
+  margin-top: 2px;
+  flex-basis: 100%;
   display: flex;
-  justify-content: space-around;
-  align-items: center;
+  margin-left: 67.5%;
+  margin-right: 15.5%;
+  justify-content: space-between;
+  align-self: flex-start;
   font-weight: 700;
-  z-index: 1;
+  font-size: 16px;
   color: #f98770;
-  transform: translate(20vw, 0);
 }
 .flexbox_options_text:hover {
   text-decoration: underline;
   cursor: pointer;
 }
-
 /* EMAIL */
-
 .flexbox_email {
-  flex-basis: 120%;
-  height: 100px;
+  flex-basis: 100%;
+  height: 60px;
   display: flex;
-  margin-top: -15vh;
+  margin-top: 1vh;
 }
-
 .flexbox_email_text {
   font-size: 35px;
   color: #5a6c73;
   font-weight: 700;
+  flex-basis: 13%;
+  margin-left: 10.75vh;
+  align-self: center;
 }
-
 .flexbox_email_rectangle {
-  margin-left: 20.3vh;
   color: #f98770;
   font-size: 19px;
   font-weight: 700;
-}
-
-.flexbox_login_item4 {
-  flex-basis: 20%;
-  margin-left: 10.75vh;
-  align-self: center;
-  margin-top: -1vh;
-}
-.flexbox_login_item42 {
   flex-basis: 24%;
-  margin-left: -10.25vh;
-  margin-right: 16.5vh;
-  margin-top: -1vh;
   align-self: center;
   background-color: rgba(255, 255, 255, 0.5);
   box-shadow: inset 0 0 3px rgba(0, 0, 0, 0.2);
-  text-align: center;
-  border-radius: 5vh;
-  max-height: 38%;
+  border-radius: 20px;
+  height: 60%;
   display: flex;
   justify-content: center;
   align-items: center;
-}
-
-.flexbox_login_item5 {
-  flex-basis: 16.5%;
-  margin-left: -31vh;
-  align-self: flex-start;
-  background-color: #5a6c73;
-  color: #f98770;
-  border-radius: 5vh;
-  margin-top: -4vh;
-  max-height: 7%;
-  font-size: 20px;
-  font-weight: 700;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  cursor: pointer;
-}
-.flexbox_login_item5:hover {
-  filter: brightness(90%);
-}
-.flexbox_login_item52 {
-  flex-basis: 50%;
-  height: 10px;
-}
-
-.flexbox_login_item6 {
-  background-color: #f98770;
-  flex-basis: 77.75%;
-  height: 2px;
-  margin-left: -18vh;
-  margin-top: -8vh;
-  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.2);
-}
-.flexbox_login_item7 {
-  flex-basis: 10%;
-}
-
-.flexbox_login_item8 {
-  flex-basis: 28%;
-  height: 14vh;
-  font-size: 10px;
-  margin-bottom: 3.5vh;
 }
 
 .page_wrapper {
@@ -190,10 +136,4 @@
   align-items: center;
   background-color: transparent;
   z-index: 1;
-}
-
-.flexbox_end_text {
-  display: flex;
-  justify-content: space-evenly;
-  margin-top: -6.5vh;
 }
