--- a/components/styles/sidebar_clothes.module.css
+++ b/components/styles/sidebar_clothes.module.css
@@ -185,3 +185,12 @@
     padding-top: 2px;
   }
 }
+
+.slide_button {
+  transform: translateY(-100%);
+  transition: transform 0.3s;
+}
+
+.slide_button.show {
+  transform: translateY(0);
+}
