--- a/components/styles/sidebar_small.module.css
+++ b/components/styles/sidebar_small.module.css
@@ -2,6 +2,10 @@
   width: 0vw;
   height: 0px;
 }
+.sidebar_logout {
+  width: 0;
+  height: 0;
+}
 .sidebar {
   position: fixed;
   display: flex;
@@ -172,6 +176,10 @@
   #sidebar_hide div img {
     width: 0px;
     height: 0px;
+  }
+  .sidebar_logout {
+    width: 40px;
+    height: 40px;
   }
   @media (max-height: 640px) {
     .sidebar {
