--- a/styles/account.module.css
+++ b/styles/account.module.css
@@ -27,6 +27,8 @@
   z-index: 1;
   box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.2);
   box-shadow: inset 0 0 3px rgba(0, 0, 0, 0.2);
+  max-width: 77vw;
+  max-height: 54vh;
 }
 /* #region -------------- TOP PART -------------  */
 /* #region BASIC */
