--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,5 +1,11 @@
 @import url("https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap");
 /* #region BODY */
+a {
+  text-decoration: none;
+}
+button {
+  border: none;
+}
 body {
   background-color: white;
   font-family: "Lato", sans-serif;
